# C2

./: .gitignore  README.md  pyproject.toml
scripts/: run_c2.sh
src/c2/: __init__.py  data.py  deepspeed.py  infer.py  llm.py  parsing.py  prompts.py  scoring.py  synthesize_rubrics.py  train_generator_dpo.py  train_verifier_grpo.py
